--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon index.js"
+    "vbot": "node src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +14,5 @@
   "dependencies": {
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
   }
 }
