--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "v-bot",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -12,8 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "discord.js": "^14.21.0",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0"
+    "discord.js": "^14.22.1",
+    "dotenv": "^17.2.2"
   }
 }
